# fire-modeling

./: .gitignore  CMakeLists.txt  README.md  Uintah_instructions.sh  render.sh
cmakeModules/: FindMaya.cmake  FindPiccante.cmake
data/: S.specline
fire-shaders/: CMakeLists.txt  README.md
fire-shaders/cmakeModules/: FindOpenVDB.cmake
fire-shaders/hitran/: hapi.py  molecule_absorption_ind.py
fire-shaders/maya/: FireShaderNode.cpp  FireShaderNode.h  VolumeFireCmd.cpp  VolumeFirePlugin.cpp  createFire.mel  createFireVolume.mel
fire-shaders/mentalray/: CMakeLists.txt  README  RenderingConstants.h  SootOpticalConstants.h  Spectrum.cpp  Spectrum.h  VoxelDataset.cpp  VoxelDataset.h  VoxelDataset.impl  VoxelDatasetColor.cpp  VoxelDatasetColor.h  VoxelDatasetColorSorted.cpp  VoxelDatasetColorSorted.h  VoxelDatasetFloat.cpp  VoxelDatasetFloat.h  fire_volume_light.cpp  fire_volume_shader.cpp  mentalRayFireShader.mi  miaux.cpp  miaux.h  parameter_volume.cpp  pbrt.h  render.sh  spectrum.cpp  spectrum.h  voxel_density.cpp
fire-shaders/mentalray/cmakeModules/: FindHalf.cmake  FindMaya.cmake
fire-shaders/mentalray/src/: RenderingConstants.h  Spectrum.cpp  Spectrum.h  VoxelDataset.h  VoxelDataset.impl  VoxelDatasetColor.cpp  VoxelDatasetColor.h  VoxelDatasetColorSorted.cpp  VoxelDatasetColorSorted.h  VoxelDatasetFloat.cpp  VoxelDatasetFloat.h  fire_volume.cpp  fire_volume_light.cpp  fire_volume_shader.cpp  miaux.cpp  miaux.h  voxel_density.cpp
fire-shaders/nist/: nist_asd.m  plot_asd_lines.m  save_nist_data.m
fire-shaders/nist/data/: Acetylene.optconst  Cu.specline  Propane.optconst
fire-shaders/report/: baththesis.sty  conclusions.tex  eg-alpha.bst  fire_rendering.bib  fire_rendering.tex  implementation_details.tex  introduction.tex  methodology.tex  previous_work.tex  results.tex
fire_shader_data/: Ba.specline  BlueSyn.optconst  C.specline  Co.specline  Cu.specline  H.specline  Li.specline  Methane.optconst  Na.specline  S.specline  Sc.specline
heat_map/: MSE.m  README.md  background_extraction_gui.m  cameraAutomaticAligment.m  closeMaya.m  closeMayaAndMoveMRLog.m  closeMayaBatch.sh  copy_result_to_folder.sh  createCTtable.m  createHeatMapTrainTestSet.m  do_genetic_solve.m  do_genetic_solve_resample.m  do_gradient_solve.m  do_quasi_mc_sampler.m  do_simulanneal_solve.m  do_uniform_sampler.m  exploreErrorFun.m  fire_attr_search2.m  fitToRange.m  ga_time_limit.m  gaplotbestcustom.m  getNextFreePort.m  getRandomInitPopulation.m  heatMapReconstruction.m  heatMapSearch.m  heat_map_fitness.m  histogramError.m  move_file.m  plot2svg.m  plotHeatMap.m  read_raw_file.m  renderAllFuels.m  resampleHeatMap.m  run-experiments-video.sh  run-experiments.sh  runCreateCTtable.sh  runCreateHeatMapTrainTestSet.sh  runDistanceTestSuite.sh  runExploreErrorFun.sh  runFireAttrSearch2.sh  (+7 more)
heat_map/MapN/: memoize.m
heat_map/creation_fnc/: gacreationfrominitguess.m  gacreationheuristic1.m  gacreationheuristic2.m  gacreationheuristic3.m  gacreationheuristic4.m  gacreationlinspace.m  gacreationupsample.m  getRandomInitPopulation.m
heat_map/crossover_fnc/: gacrossovercombine.m  gacrossovercombine2.m  gacrossovercombineprior.m  gacrossoverpermute.m  gaxoverpriorhisto.m
heat_map/data/: CT-Acetylene.mat  CT-Ba.mat  CT-BlackBody.mat  CT-BlueSyn.mat  CT-C.mat  CT-C3H8.mat  CT-Co.mat  CT-Cu.mat  CT-H.mat  CT-Li.mat  CT-Methane.mat  CT-Na.mat  CT-Propane.mat  CT-S.mat  CT-Sc.mat  bbr_precomputed.txt
heat_map/density_fnc/: estimate_density_scale.m  estimate_density_scale_initial.m  estimate_density_with_range.m  icm_estimate_density_none.m  icm_estimate_density_scale.m
heat_map/error_fnc/: MSE.m  MSEPerceptual.m  MSEPerceptualExp.m  histogramDErrorOpti.m  histogramErrorApprox.m  histogramErrorOpti.m  histogramErrorOptiN.m  imageSideDistribution.m  imageSideDistributionInvariant.m
heat_map/exposure_fnc/: estimate_exposure_scale.m  estimate_exposure_scale_initial.m  estimate_exposure_with_range.m  grad_estimate_exposure_scale.m  icm_density_estimate_exposure_scale.m  icm_estimate_exposure_none.m  icm_estimate_exposure_scale.m
heat_map/file_management/: append_to_summary_file.m  convert4dma_to_raw2.m  copy_maya_log_files.m  empty_maya_log_files.m  move_file.m  readGoalAndMask.m  read_bbdata.m  read_raw_file.m  saveErrorFncSummary.m  saveErrorFunSummary.m  save_raw_file.m  save_summary_file.m
heat_map/fitness_fnc/: camera_align_fitness.m  heat_map_fitness.m  heat_map_fitnessN.m  heat_map_fitness_approx.m  heat_map_fitness_gaussprocess.m  heat_map_fitness_gp.m  heat_map_fitness_gp_pca.m  heat_map_fitness_interp.m  heat_map_fitness_order_float_par.m  heat_map_fitness_order_par.m  heat_map_fitness_par.m  nonlcon_fitness_order.m  render_attr_fitness.m  render_attr_fitness_par.m
heat_map/mex_fnc/: CMakeLists.txt  combineHeatMap2point.cpp  combineHeatMap2point.m  combineHeatMap8.cpp  combineHeatMap8.m  compileAll.m  createVoxelDataSet.cpp  createVoxelDataSet.h  crossover2point3d.cpp  mixHeatMaps.cpp  mixHeatMaps.m
heat_map/mex_fnc/cmakeModules/: FindHalf.cmake  FindILMBase.cmake  FindMatlab.cmake
hitran/: molecule_absorption_ind.py
image_differences/: README.md  render-diff.sh  run_matlab.sh
maya/: AEFireControlNodeTemplate.mel  CMakeLists.txt  FireControlNode.cpp  FireControlNode.h  LoadFireDataCmd.cpp  LoadFireDataCmd.h  SaveFireDataCmd.cpp  SaveFireDataCmd.h  SaveFireDataPlugin.cpp  VolumeFirePlugin.cpp
maya/src/: FireControlNode.cpp  FireControlNode.h  LoadFireDataCmd.cpp  LoadFireDataCmd.h  SaveFireDataCmd.cpp  SaveFireDataPlugin.cpp
mentalray/: AEvoxel_densityTemplate.mel  fire_shader.mi
nist/: README.md  nist_asd.m  save_nist_data.m  spectest.m
paper/: Makefile  heat-map.bib  heat-map.tex
pegoraro_data/: CMakeLists.txt  Uintah_instructions.sh  save_data.sh  udaToUintah.sh  uintahToSparseAll.sh
pegoraro_data/src/: uintahToSparse.cpp
presentation/: bibliography.bib  fire-shader-presentation.tex
report/: baththesis.sty  conclusions.tex  fire_rendering.bib  fire_rendering.tex  implementation_details.tex  introduction.tex  methodology.tex  previous_work.tex  results.tex
(+387 files in other folders)
