SET(MAYA_PLUGIN_NAME "SaveFireDataPlugin" CACHE STRING "maya version" FORCE )
MARK_AS_ADVANCED(MAYA_PLUGIN_NAME)

# Set plugin paths, paths are computed regardless of the variable so that
# they are correctly set if the user first has it to false and then changes it 
# to true
IF(IS_DEFAULT_PREFIX)	
	
	IF(NOT MAYA_PLUGIN_INSTALL_PREFIX)	
		SET(MAYA_PLUGIN_INSTALL_PREFIX "${MAYA_LOCATION}/bin/plug-ins" CACHE PATH "maya plugin install path" FORCE)	
	ELSE(NOT MAYA_PLUGIN_INSTALL_PREFIX)
		SET(MAYA_PLUGIN_INSTALL_PREFIX "${MAYA_PLUGIN_INSTALL_PREFIX}" CACHE PATH "maya plugin install path" FORCE)
	ENDIF(NOT MAYA_PLUGIN_INSTALL_PREFIX)  
    
ELSE(IS_DEFAULT_PREFIX)

	IF(NOT MAYA_PLUGIN_INSTALL_PREFIX OR NOT(CMAKE_INSTALL_PREFIX STREQUAL PREV_CMAKE_INSTALL_PREFIX))	
		SET(MAYA_PLUGIN_INSTALL_PREFIX "${CMAKE_INSTALL_PREFIX}/plug-ins" CACHE PATH "maya plugin install path" FORCE)	
	ELSE(NOT MAYA_PLUGIN_INSTALL_PREFIX OR NOT(CMAKE_INSTALL_PREFIX STREQUAL PREV_CMAKE_INSTALL_PREFIX))
		SET(MAYA_PLUGIN_INSTALL_PREFIX "${MAYA_PLUGIN_INSTALL_PREFIX}" CACHE PATH "maya plugin install path" FORCE)
	ENDIF(NOT MAYA_PLUGIN_INSTALL_PREFIX OR NOT(CMAKE_INSTALL_PREFIX STREQUAL PREV_CMAKE_INSTALL_PREFIX)) 

ENDIF(IS_DEFAULT_PREFIX)

# Build the library
IF(BUILD_READ_WRITE_FLUIDFN)

	FILE(GLOB MAYA_SRC
		"src/*.h"
		"src/*.cpp"
	)

	ADD_LIBRARY(${MAYA_PLUGIN_NAME}
		SHARED
	   ${MAYA_SRC}
	)

	TARGET_LINK_LIBRARIES(${MAYA_PLUGIN_NAME} ${MAYA_LIBRARIES})
	SET_TARGET_PROPERTIES(${MAYA_PLUGIN_NAME} PROPERTIES COMPILE_DEFINITIONS "REQUIRE_IOSTREAM;_BOOL" PREFIX "")
	INSTALL(TARGETS ${MAYA_PLUGIN_NAME} LIBRARY DESTINATION "${MAYA_PLUGIN_INSTALL_PREFIX}")
	
ENDIF(BUILD_READ_WRITE_FLUIDFN)
